# DeepTrace

./: .env.example  .gitignore  ReadMe.md  docker-compose.yml  requirements.txt
deeptrace-api/: Dockerfile  requirements.txt
deeptrace-api/app/: main.py
deeptrace-brain/: Dockerfile
deeptrace-brain/models/: model_features.json
deeptrace-brain/src/: inference_engine.py  traffic_consumer.py
deeptrace-dashboard/: Dockerfile  index.html  package.json  vite.config.js
deeptrace-dashboard/src/: App.jsx
deeptrace-sniffer/: CMakeLists.txt  Dockerfile
deeptrace-sniffer/include/: flow_table.h  redis_producer.h
deeptrace-sniffer/src/: flow_table.cpp  redis_producer.cpp
notebooks/: 1_Data_Preprocessing.ipynb  2_Feature_Engineering.ipynb  3_Model_Training.ipynb
scripts/: create_subset.py  download_dataset.sh
src/: main.cpp
